--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular.io-example",
+  "name": "angular-template-example",
   "version": "0.0.0",
   "description": "Example project from an angular.io guide.",
   "license": "MIT",
@@ -13,37 +13,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.0-next.0",
+    "@angular/animations": "~13.1.1",
     "@angular/cdk": "^13.1.1",
-    "@angular/common": "~13.0.0-next.0",
-    "@angular/compiler": "~13.0.0-next.0",
-    "@angular/core": "~13.0.0-next.0",
-    "@angular/forms": "~13.0.0-next.0",
-    "@angular/material": "^12.2.13",
-    "@angular/platform-browser": "~13.0.0-next.0",
-    "@angular/platform-browser-dynamic": "~13.0.0-next.0",
-    "@angular/router": "~13.0.0-next.0",
-    "angular-in-memory-web-api": "~0.11.0",
+    "@angular/common": "~13.1.1",
+    "@angular/compiler": "~13.1.1",
+    "@angular/core": "~13.1.1",
+    "@angular/forms": "~13.1.1",
+    "@angular/material": "^13.1.1",
+    "@angular/platform-browser": "~13.1.1",
+    "@angular/platform-browser-dynamic": "~13.1.1",
+    "@angular/router": "~13.1.1",
+    "angular-in-memory-web-api": "~0.13.0",
     "rxjs": "~7.4.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.0-rc.3",
-    "@angular/cli": "~13.0.0-rc.3",
-    "@angular/compiler-cli": "~13.0.0-next.0",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
-    "jasmine-marbles": "~0.8.3",
+    "@angular-devkit/build-angular": "~13.1.2",
+    "@angular/cli": "~13.1.2",
+    "@angular/compiler-cli": "~13.1.1",
+    "@types/jasmine": "~3.10.2",
+    "@types/node": "^17.0.5",
+    "jasmine-core": "~3.10.1",
+    "jasmine-marbles": "~0.8.4",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.0",
+    "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
+    "karma-coverage": "~2.1.0",
+    "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.7.0",
     "protractor": "~7.0.0",
-    "ts-node": "~10.1.0",
-    "typescript": "~4.4.3"
+    "ts-node": "~10.4.0",
+    "typescript": "~4.5.4"
   }
 }
